--- a/task3/main.css
+++ b/task3/main.css
@@ -68,14 +68,7 @@ sub {
     bottom: -.25em
 }
 
-img {
-    border: 0
-}
-img{
-    align-content: center;
-    align-self: center;
-    text-align: center;
-}
+
 
 svg:not(:root) {
     overflow: hidden
@@ -129,6 +122,41 @@ h1{
     text-align: center;
 }
 
+h3{
+    text-align: center;
+    font-weight: lighter;
+}
+
+.pic{
+    text-align: center;
+    align-content: center;
+}
+
+.tournament-header{
+    text-align: left;
+    font-size: 30px;
+
+}
+figure{
+    position: relative;
+    width: 300px;
+    margin: 20px auto;
+    border-radius: 5px;
+    box-shadow: 0 0 5px #999999;
+
+}
+
+
+.image figcaption{
+
+    padding: 15px 5%;
+    text-align: center;
+}
+
+/*если картинка больше чем 300px, то стоит добавить еще и эти стили*/
+figure img{
+    width: 200%;
+}
 
 
 button::-moz-focus-inner,
@@ -275,5 +303,237 @@ th {
     .table-bordered td {
         border: 1px solid #ddd!important
     }
+}
+
+.tournament-details-list {
+    list-style: none;
+    padding: 0;
+}
+
+.tournament-details-list li {
+    position: relative;
+    padding-left: 25px;
+    margin-top: 5px;
+}
+
+.mdi-action-today:before {
+    content: "\e686";
+}
+
+.freetile-item-text {
+    padding: 30px;
+}
+
+.freetile-item-text h4 {
+    margin: 0;
+}
+
+.freetile-item-text h4 a {
+    color: #263238;
+}
+
+.label-surface-large {
+    padding: 3px 5px;
+    border-radius: 5px;
+    color: #FFF;
+    font-size: 12px;
+    font-weight: 400;
+    letter-spacing: -1px;
+    display: inline-block;
+}
+
+.label-surface-large.label-indoor-grass {
+    background: #1de9b6;
+    -webkit-box-shadow: 5px -5px 0 #3498db;
+    box-shadow: 5px -5px 0 #3498db;
+}
+
+.label-surface-large.label-indoor-beach {
+    background: #ffd600;
+    -webkit-box-shadow: 5px -5px 0 #3498db;
+    box-shadow: 5px -5px 0 #3498db;
+}
+
+.tournament-results-index {
+}
+
+.tournament-results-index .results-division-wrapper-short {
+    margin-right: 0;
+    margin-top: 15px;
+}
+
+.col-xs-1,.col-sm-1,.col-md-1,.col-lg-1,.col-xs-2,.col-sm-2,.col-md-2,.col-lg-2,.col-xs-3,.col-sm-3,.col-md-3,.col-lg-3,.col-xs-4,.col-sm-4,.col-md-4,.col-lg-4,.col-xs-5,.col-sm-5,.col-md-5,.col-lg-5,.col-xs-6,.col-sm-6,.col-md-6,.col-lg-6,.col-xs-7,.col-sm-7,.col-md-7,.col-lg-7,.col-xs-8,.col-sm-8,.col-md-8,.col-lg-8,.col-xs-9,.col-sm-9,.col-md-9,.col-lg-9,.col-xs-10,.col-sm-10,.col-md-10,.col-lg-10,.col-xs-11,.col-sm-11,.col-md-11,.col-lg-11,.col-xs-12,.col-sm-12,.col-md-12,.col-lg-12{
+    position:relative;
+    min-height:1px;
+    padding-right:15px;
+    padding-left:15px
+}
+
+@media (min-width:992px){
+    .col-md-1,.col-md-2,.col-md-3,.col-md-4,.col-md-5,.col-md-6,.col-md-7,.col-md-8,.col-md-9,.col-md-10,.col-md-11,.col-md-12{
+        float:left
+    }
+}
+
+.results-division-wrapper-short {
+    position: relative;
+    text-align: left;
+    margin: 0.3em 0 1em;
+}
+
+.tournament-results-index {
+}
+
+.tournament-results-index .results-division-wrapper-short {
+    margin-right: 0;
+    margin-top: 15px;
+}
+
+.results-division ul {
+    margin: 0.5em 0;
+}
+
+.list-unstyled{
+    padding-left:0;
+    list-style:none
+}
+
+.results-place {
+    display: inline-block;
+    width: 40px;
+    text-align: right;
+    margin-right: 5px;
+    white-space: nowrap;
+}
+
+.flag {
+    width: 20px;
+    display: inline-block;
+    margin: 0 5px 0 10px;
+}
+
+.flag img {
+    vertical-align: middle;
+}
+
+.text-center{
+    text-align:center
+}
+
+h1, .h1, h2, .h2, h3, .h3 {
+    margin-top: 35px;
+    margin-bottom: 15px;
+}
+
+h1, .h1 {
+    font: 700 43px/1.2 "Fira Sans", Arial;
+    letter-spacing: -1px;
+    /*margin-top: 0;*/
+}
+
+.content h1, .content h2, .content h3, .content h4 {
+    width: 75%;
+    max-width: 800px;
+}
+
+.freetile-item-box {
+    background: white;
+    border-radius: 6px;
+    box-shadow: 0 3px 0 0 rgba(0, 0, 0, 0.05);
+}
+
+.index-result-photo img {
+    width: 100%;
+    border-top-left-radius: 6px;
+    border-top-right-radius: 6px;
+}
+
+.lazy {
+    display: none;
+}
+
+.freetile-item-text {
+    padding: 30px;
+}
+
+.freetile-item-text h4 {
+    margin: 0;
+}
+
+.freetile-item-text h4 a {
+    color: #263238;
+}
+
+.freetile-item-wiki-popular .freetile-item-text {
+    font-size: 13px;
+    padding: 15px;
+}
+
+.freetile-item-text {
+    padding: 30px;
+}
+
+.freetile-item-text h4 {
+    margin: 0;
+}
+
+.freetile-item-text h4 a {
+    color: #263238;
+}
+
+.freetile-item-wiki-popular .freetile-item-text {
+    font-size: 13px;
+    padding: 15px;
+}
+
+.archive-tournament-description .results-division-wrapper-short {
+    float: left;
+    margin-right: 3rem;
+}
+
+.results-division-wrapper {
+    position: relative;
+    /*float: left;*/
+    display: inline-block;
+    text-align: left;
+    margin: 0.3em 0 2em 0;
+    font-size: 0.9em;
+}
+
+.results-division-wrapper:last-child {
+    margin-right: 0;
+}
+
+.results-division-wrapper-short {
+    position: relative;
+    text-align: left;
+    margin: 0.3em 0 1em;
+}
+
+.results-division-short .tournament-results-sotg-icon {
+    left: -1px;
+    top: 3px;
+}
+
+.results-division-short > ul {
+    margin-top: 0.3em;
+    margin-bottom: 0.3em;
+}
+
+.results-division-short > ul > li {
+    padding: 3px 0;
+    position: relative;
+    white-space: nowrap;
+    overflow: hidden;
+}
+
+.flag {
+    width: 20px;
+    display: inline-block;
+    margin: 0 5px 0 10px;
+}
+
+.flag img {
+    vertical-align: middle;
 }
 
